Specificity reduction, table tweaks, and dark mode fixes
Lowered class specificity of the following by 1
* narrative, quest, advice, notable, caption-top, content-embed cite
* Removed :is(*-content) to apply within non-editor contexts, like item desc. dropdowns

Tweaks
* Sets 'default' p top/bottom margin to 0 within tables (spacing handles by td padding)
  * applies to single paragraphs, multiple paragraph siblings will have margin between each other
* table td padding changed from 'rem' to 'em' units for better fit in chat card/drop down desc.

Dark Mode
* Reduced unnecessarily high specificity for dnd5e2 selectors introduced in previous commit
  * (0,5,0) to (0, 2, 0)
* Moved table header color gradient vars to containing table, for easier override

--- a/less/v2/chat.less
+++ b/less/v2/chat.less
@@ -408,6 +408,7 @@
 
         /* Immediate children vert margins
          * are handled by the column gap */
+        padding-top: 0.5rem;
         > * {
           margin-top:0;
           margin-bottom:0;
@@ -416,12 +417,6 @@
 
       p {
         margin: 0;
-        &:first-child { padding-top: .5rem; }
-      }
-
-      /* Reduce padding of cells to help fit in card */
-      td {
-        padding:0.1em;
       }
     }
 
